@@ -1,5 +1,9 @@
 2004-12-05  Damien Sandras  <dsandras@gnome.org>
 
+	* Makefile.am: Use PACKAGE_NAME everywhere.
+
+2004-12-05  Damien Sandras  <dsandras@gnome.org>
+
 	* configure.in: Revered unintentional change.
 
 2004-12-05  Damien Sandras  <dsandras@gnome.org>
